syntax = "proto3";

package peers_touch.model.events.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model/events;events";

// Event types
message Event {
  string id = 1;
  string type = 2;
  bytes payload = 3;
  google.protobuf.Timestamp created_at = 4;
}

// Pull events (long polling)
message PullEventsRequest {
  int32 limit = 1;
  int64 since_ts = 2;  // Unix timestamp
}

message PullEventsResponse {
  repeated Event events = 1;
}

// Acknowledge events
message AckEventsRequest {
  repeated string event_ids = 1;
}

message AckEventsResponse {
  int32 acked_count = 1;
}

// Stats
message GetEventsStatsRequest {
  // Empty request
}

message GetEventsStatsResponse {
  int64 pending_count = 1;
  int64 total_delivered = 2;
  int64 active_streams = 3;
}
